fix: truncate text on status bar
This ensure that the call tree can still be interacted with
when the error statuses are very large.

--- a/log-viewer/resources/css/Status.css
+++ b/log-viewer/resources/css/Status.css
@@ -1,25 +1,45 @@
 .statusBar {
-    margin-top: 10px;
-	display: flex;
+  margin-top: 10px;
+  display: flex;
 }
 #status {
-	display: flex;
-	align-items: center;
-	font-size: 10pt;
-	margin-bottom: 5px;
-	margin-top: 5px;
+  display: flex;
+  align-items: center;
+  font-size: 10pt;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 .statusPad {
-	flex-grow: 1;
+  flex-grow: 1;
 }
 .helpIcon {
-	width: 24px;
-	height: 24px;
+  width: 24px;
+  height: 24px;
 }
 .reason {
-	display: inline-block;
-	padding: 2px;
-	padding-left: 4px;
-	padding-right: 4px;
-	margin-left: 5px;
+  display: inline-block;
+  padding: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
+  margin-left: 5px;
+}
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  padding: 5px;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
+  word-break: break-word;
+  width: 75%;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, 0px);
+}
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
